--- a/drivers.html
+++ b/drivers.html
@@ -1,19 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Drivers — EuroVantage Jobs</title>
 <style>
-body {font-family:"Poppins",sans-serif;background:#f9f9f9;text-align:center;padding:40px;}
-img {width:90%;max-width:500px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);}
-a {display:inline-block;margin-top:25px;padding:10px 20px;background:#d4af37;color:#fff;border-radius:8px;text-decoration:none;}
+  body {
+    font-family: "Poppins", sans-serif;
+    background: #f9f9f9;
+    color: #000;
+    padding: 40px 20px;
+    max-width: 900px;
+    margin: 0 auto;
+    line-height: 1.6;
+  }
+  h2 {
+    color: #d4af37;
+    font-weight: 700;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  img {
+    width: 90%;
+    max-width: 500px;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    margin: 0 auto 30px;
+    display: block;
+  }
+  p {
+    font-size: 18px;
+    margin-bottom: 25px;
+  }
+  h3 {
+    color: #d4af37;
+    margin-top: 40px;
+    margin-bottom: 15px;
+  }
+  ul {
+    max-width: 700px;
+    margin: 0 auto 30px;
+    padding-left: 20px;
+    font-size: 17px;
+  }
+  ul li {
+    margin-bottom: 10px;
+  }
+  form {
+    max-width: 400px;
+    margin: 0 auto 40px;
+    background: #fff;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(212,175,55,0.3);
+    text-align: left;
+  }
+  label {
+    font-weight: 600;
+    display: block;
+    margin-bottom: 6px;
+  }
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"],
+  input[type="file"] {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+    box-sizing: border-box;
+  }
+  button {
+    width: 100%;
+    background: #d4af37;
+    border: none;
+    padding: 15px;
+    font-weight: 700;
+    font-size: 18px;
+    color: #000;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  button:hover {
+    background: #c7a130;
+  }
+  a.back-link {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 12px 25px;
+    background: #050505;
+    color: #d4af37;
+    font-weight: 600;
+    border-radius: 8px;
+    text-decoration: none;
+    text-align: center;
+  }
+  a.back-link:hover {
+    background: #333;
+  }
 </style>
 </head>
 <body>
+
 <h2>🚗 Drivers</h2>
-<img src="https://i.pinimg.com/736x/47/68/3a/47683a57d4a71a10a7e1c9b7bdb0e5e4.jpg" alt="Professional Drivers">
-<p>Take on professional driving roles for logistics companies, private transport, and delivery networks across Europe.</p>
-<a href="index.html">← Back to Jobs</a>
+<img src="https://i.pinimg.com/736x/47/68/3a/47683a57d4a71a10a7e1c9b7bdb0e5e4.jpg" alt="Professional Drivers" />
+
+<p>EuroVantage offers a variety of professional driving roles across Europe tailored to both skilled and non-skilled drivers. Whether you have extensive driving experience or are seeking an entry-level position, we have opportunities for you to grow your career abroad with full visa and travel support.</p>
+
+<p>Our driving roles include logistics drivers for international freight companies, private transport drivers, warehouse goods delivery drivers, and part-time driving jobs suitable for those seeking flexible working hours.</p>
+
+<h3>Driving Positions Available</h3>
+<ul>
+  <li><strong>Skilled Drivers:</strong> Professional drivers with licenses for heavy vehicles, trucks, buses, and special transport.</li>
+  <li><strong>Non-Skilled Drivers:</strong> Drivers with basic licenses suitable for light vehicles, assisting roles, and beginner delivery driving.</li>
+  <li><strong>Delivery Drivers:</strong> Handling the transport of goods from warehouses and distribution centers to clients and retail outlets.</li>
+  <li><strong>Part-Time Drivers:</strong> Flexible working options with competitive hourly wages, ideal for students or those balancing other commitments.</li>
+</ul>
+
+<h3>Salary Information</h3>
+<ul>
+  <li><strong>Skilled Drivers:</strong> Typically earn between <em>€2,500 to €3,500</em> per month, depending on the country and company.</li>
+  <li><strong>Non-Skilled Drivers:</strong> Can expect monthly salaries ranging from <em>€1,800 to €2,200</em>.</li>
+  <li><strong>Warehouse Delivery Drivers:</strong> Salaries range from <em>€2,000 to €2,800</em> monthly, depending on workload and region.</li>
+  <li><strong>Part-Time Drivers:</strong> Hourly wages between <em>€10 to €15</em>, allowing flexibility with consistent income.</li>
+</ul>
+
+<h3>Why Choose Driving Roles with EuroVantage?</h3>
+<p>Our comprehensive program ensures that you not only get a verified job but also receive full assistance with work permits, visa processing, and travel arrangements. We collaborate with top companies across Europe in the transport and logistics sectors to offer sustainable and well-paid driving jobs for our clients. Your safety, comfort, and career growth are our top priorities.</p>
+
+<form action="https://formsubmit.co/eurovantage@gmail.com" method="POST" enctype="multipart/form-data" target="_blank">
+  <input type="hidden" name="Job Role" value="Drivers" />
+  
+  <label for="fullName">Full Name</label>
+  <input type="text" id="fullName" name="Full Name" placeholder="Your full name" required />
+  
+  <label for="phone">Phone Number</label>
+  <input type="tel" id="phone" name="Phone" placeholder="Your phone number" required />
+  
+  <label for="email">Email Address</label>
+  <input type="email" id="email" name="Email" placeholder="Your email address" required />
+  
+  <label for="cv">Upload Your CV</label>
+  <input type="file" id="cv" name="CV" accept=".pdf,.doc,.docx" required />
+  
+  <!-- Optional FormSubmit settings -->
+  <input type="hidden" name="_subject" value="New Job Application - Drivers - EuroVantage" />
+  <input type="hidden" name="_captcha" value="false" />
+  
+  <button type="submit">Apply for this Job</button>
+</form>
+
+<a href="index.html" class="back-link">← Back to Jobs</a>
+
 </body>
 </html>
