--- a/caterers.html
+++ b/caterers.html
@@ -1,40 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Caterers — EuroVantage Jobs</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Caterers Jobs — EuroVantage</title>
+
 <style>
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: #f9f9f9;
-  text-align: center;
-  padding: 40px;
-}
-img {
-  width: 90%;
-  max-width: 500px;
-  border-radius: 15px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-}
-a {
-  display: inline-block;
-  margin-top: 25px;
-  padding: 10px 20px;
-  background-color: #d4af37;
-  color: white;
-  border-radius: 8px;
-  text-decoration: none;
-}
+  :root {
+    --gold: #d4af37;
+    --dark: #050505;
+    --text-light: #f2f2f2;
+  }
+  body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    background: var(--dark);
+    color: var(--text-light);
+  }
+  header {
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    background-color: #fff;
+    border-bottom: 1px solid var(--gold);
+    position: relative;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+  header h1 {
+    color: var(--gold);
+    font-family: "Times New Roman", serif;
+    font-weight: 700;
+    font-size: 28px;
+    margin: 0;
+  }
+  nav {
+    position: relative;
+  }
+  .menu-btn {
+    font-size: 28px;
+    cursor: pointer;
+    user-select: none;
+    color: #333;
+    background: none;
+    border: none;
+  }
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    background: #fff;
+    border: 1px solid var(--gold);
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    min-width: 160px;
+    z-index: 1000;
+  }
+  .dropdown-menu a {
+    display: block;
+    padding: 12px 18px;
+    color: #333;
+    text-decoration: none;
+    font-weight: 500;
+    border-bottom: 1px solid #eee;
+  }
+  .dropdown-menu a:last-child {
+    border-bottom: none;
+  }
+  .dropdown-menu a:hover {
+    background-color: var(--gold);
+    color: #000;
+  }
+  main {
+    max-width: 900px;
+    margin: 60px auto;
+    background: #101010;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(212,175,55,0.4);
+  }
+  h2 {
+    color: var(--gold);
+    margin-bottom: 20px;
+  }
+  p {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 25px;
+  }
+  ul {
+    text-align: left;
+    margin-left: 25px;
+    margin-bottom: 25px;
+    color: var(--text-light);
+  }
+  ul li {
+    margin-bottom: 8px;
+  }
+  .apply-btn {
+    display: inline-block;
+    background: var(--gold);
+    color: #000;
+    padding: 14px 32px;
+    border-radius: 8px;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .apply-btn:hover {
+    background: #c7a130;
+  }
+  footer {
+    text-align: center;
+    padding: 25px;
+    border-top: 1px solid rgba(212,175,55,0.2);
+    font-size: 14px;
+    color: #aaa;
+    margin-top: 60px;
+  }
 </style>
 </head>
 <body>
 
-<h2>🍴 Caterers</h2>
-<img src="https://i.pinimg.com/736x/d5/0e/a9/d50ea9f4a58228cddc5f833b7d7a3bfa.jpg" alt="Caterers">
-<p>Join our network of professional caterers working across top European venues and hospitality events.</p>
+<header>
+  <nav>
+    <button class="menu-btn" id="menuBtn" aria-label="Toggle menu">☰</button>
+    <div class="dropdown-menu" id="dropdownMenu">
+      <a href="index.html">Home</a>
+      <a href="index.html#jobs">Jobs</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </div>
+  </nav>
+  <h1>✨ EuroVantage</h1>
+</header>
 
-<a href="index.html">← Back to Jobs</a>
+<main>
+  <h2>🍴 Caterers Jobs in Europe</h2>
+  <p>
+    Join our verified Caterers job program and start your exciting career in Europe.
+    We provide full travel and visa support so you can advance your career with confidence.
+  </p>
+  
+  <p>Typical Roles Include:</p>
+  <ul>
+    <li>Food Preparation Assistant</li>
+    <li>Kitchen Helper</li>
+    <li>Banquet Staff</li>
+    <li>Event Catering Assistant</li>
+  </ul>
+  
+  <a href="mailto:eurovantage@gmail.com?subject=Application for Caterers Job" class="apply-btn">Apply Now</a>
+</main>
+
+<footer>
+  © <script>document.write(new Date().getFullYear())</script> EuroVantage — Accra, Ghana. All rights reserved.
+</footer>
+
+<script>
+  const menuBtn = document.getElementById('menuBtn');
+  const dropdownMenu = document.getElementById('dropdownMenu');
+
+  menuBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    if (dropdownMenu.style.display === 'block') {
+      dropdownMenu.style.display = 'none';
+    } else {
+      dropdownMenu.style.display = 'block';
+    }
+  });
+
+  // Close dropdown if clicking outside menu or links
+  document.addEventListener('click', (e) => {
+    if (!dropdownMenu.contains(e.target) && e.target !== menuBtn) {
+      dropdownMenu.style.display = 'none';
+    }
+  });
+</script>
 
 </body>
 </html>
