--- a/factory-workers.html
+++ b/factory-workers.html
@@ -4,16 +4,183 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Factory Workers — EuroVantage Jobs</title>
+
 <style>
-body {font-family:"Poppins",sans-serif;background:#f9f9f9;text-align:center;padding:40px;}
-img {width:90%;max-width:500px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);}
-a {display:inline-block;margin-top:25px;padding:10px 20px;background:#d4af37;color:#fff;border-radius:8px;text-decoration:none;}
+/* (STYLES UNCHANGED — SAME AS YOUR CODE) */
+:root {
+  --gold: #d4af37;
+  --dark: #050505;
+  --dark-soft: #0b0b0b;
+  --text-light: #f2f2f2;
+}
+body{margin:0;font-family:"Poppins",sans-serif;background:var(--dark);color:var(--text-light);}
+.container{max-width:1100px;margin:auto;padding:50px 20px;}
+h2,h3{color:var(--gold);text-align:center;}
+.intro{text-align:center;max-width:850px;margin:0 auto 50px;font-size:17px;line-height:1.6;color:#ddd;}
+.section-title{margin:60px 0 30px;font-size:30px;}
+.job-card{background:var(--dark-soft);border-radius:18px;box-shadow:0 8px 25px rgba(212,175,55,0.08);border:1px solid rgba(212,175,55,0.15);margin-bottom:35px;padding:25px;display:grid;grid-template-columns:1fr 1.3fr;gap:25px;transition:.3s;}
+.job-card:hover{transform:translateY(-4px);box-shadow:0 12px 30px rgba(212,175,55,0.18);}
+.job-card img{width:100%;height:260px;object-fit:cover;border-radius:14px;}
+.salary{font-weight:600;margin:10px 0;color:#9cffc4;}
+.job-card p{color:#ddd;line-height:1.6;}
+.job-card ul{padding-left:18px;}
+.apply-btn{display:inline-block;margin-top:16px;padding:12px 26px;background:var(--gold);color:#000;font-weight:600;border-radius:8px;cursor:pointer;}
+.apply-btn:hover{background:#c7a130;}
+#applyForm{display:none;background:var(--dark-soft);border-radius:18px;padding:35px;margin-top:60px;border:1px solid rgba(212,175,55,.2);}
+input,select,textarea{padding:13px;border-radius:8px;border:1px solid #333;background:#000;color:#fff;}
+button{padding:14px;background:var(--gold);border:none;border-radius:8px;font-weight:600;cursor:pointer;}
+.back-link{display:inline-block;margin-top:50px;color:#aaa;text-decoration:none;}
+@media(max-width:800px){.job-card{grid-template-columns:1fr;}}
 </style>
+
+<script>
+function showApplyForm(role){
+  document.getElementById("applyForm").style.display="block";
+  document.getElementById("jobPosition").value = role;
+  document.getElementById("applyForm").scrollIntoView({behavior:"smooth"});
+}
+</script>
 </head>
+
 <body>
-<h2>🏭 Factory Workers</h2>
-<img src="https://i.pinimg.com/736x/d0/3a/7a/d03a7a0ef4686126a68992c7b2c39bfb.jpg" alt="Factory Workers">
-<p>Secure reliable manufacturing positions in clean, modern European factories with steady income and growth opportunities.</p>
-<a href="index.html">← Back to Jobs</a>
+<div class="container">
+
+<h2>🏭 Factory Worker Jobs in Europe</h2>
+<p class="intro">
+EuroVantage connects applicants to **verified European factories** offering
+<strong>legal employment, steady income, and long-term stability</strong>.
+Whether you are starting fresh or already skilled, we have opportunities for you.
+</p>
+
+<!-- ================= NON-SKILLED JOBS ================= -->
+<h3 class="section-title">🔹 Non-Skilled Factory Jobs (No Experience Required)</h3>
+
+<div class="job-card">
+<img src="https://i.pinimg.com/736x/d0/3a/7a/d03a7a0ef4686126a68992c7b2c39bfb.jpg">
+<div>
+<h3>Assembly Line Worker</h3>
+<div class="salary">💶 €1,300 – €1,800 / month</div>
+<p>
+Ideal for first-time workers. You will assist in assembling, packing,
+and inspecting products in modern, automated factories.
+</p>
+<ul>
+<li>No education or experience required</li>
+<li>Paid training on arrival</li>
+<li>Overtime & shift bonuses</li>
+<li>Accommodation support</li>
+</ul>
+<span class="apply-btn" onclick="showApplyForm('Assembly Line Worker')">Apply</span>
+</div>
+</div>
+
+<div class="job-card">
+<img src="https://i.pinimg.com/736x/38/9b/58/389b58f76f9f78a1b9f6e39d845e2c4b.jpg">
+<div>
+<h3>Factory Warehouse Assistant</h3>
+<div class="salary">💶 €1,250 – €1,700 / month</div>
+<p>
+Support factory operations by loading, labeling, storing,
+and moving finished goods inside warehouse facilities.
+</p>
+<ul>
+<li>No technical skills required</li>
+<li>Protective equipment provided</li>
+<li>Shift flexibility (day/night)</li>
+<li>Contract renewal available</li>
+</ul>
+<span class="apply-btn" onclick="showApplyForm('Factory Warehouse Assistant')">Apply</span>
+</div>
+</div>
+
+<!-- ================= SKILLED JOBS ================= -->
+<h3 class="section-title">🔹 Skilled Factory Jobs (Experience Advantage)</h3>
+
+<div class="job-card">
+<img src="https://i.pinimg.com/736x/94/9f/6a/949f6a7a947c4e9e2b6a5c2d3cbbdf7d.jpg">
+<div>
+<h3>Machine Operator</h3>
+<div class="salary">💶 €1,600 – €2,300 / month</div>
+<p>
+Operate and monitor industrial machinery used in food processing,
+packaging, or manufacturing plants while ensuring safety standards.
+</p>
+<ul>
+<li>Basic machine or technical knowledge</li>
+<li>Higher salary for experience</li>
+<li>Performance bonuses</li>
+<li>Paid safety training</li>
+</ul>
+<span class="apply-btn" onclick="showApplyForm('Machine Operator')">Apply</span>
+</div>
+</div>
+
+<div class="job-card">
+<img src="https://i.pinimg.com/736x/2e/55/87/2e5587a19d70a9a63a0f3e1b343bde65.jpg">
+<div>
+<h3>Quality Control Inspector</h3>
+<div class="salary">💶 €1,700 – €2,500 / month</div>
+<p>
+Inspect finished products, identify defects,
+and ensure quality standards are met before shipment.
+</p>
+<ul>
+<li>Attention to detail required</li>
+<li>Experience preferred but not mandatory</li>
+<li>Stable long-term contracts</li>
+<li>Career advancement opportunities</li>
+</ul>
+<span class="apply-btn" onclick="showApplyForm('Quality Control Inspector')">Apply</span>
+</div>
+</div>
+
+<!-- ================= APPLY FORM ================= -->
+<div id="applyForm">
+<h3>Apply for This Job</h3>
+<p>Submit your details and our recruitment team will contact you.</p>
+
+<form action="https://formsubmit.co/eurovantage37@gmail.com" method="POST">
+
+  <!-- Security -->
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_template" value="table">
+  <input type="hidden" name="_subject" value="New Job Application - EuroVantage">
+  <input type="hidden" name="_next" value="thank-you.html">
+
+  <input type="text" name="Full Name" placeholder="Full Name" required>
+
+  <input type="email" name="Email Address" placeholder="Email Address" required>
+
+  <input type="tel" name="Phone Number" placeholder="Phone Number" required>
+
+  <input
+    type="text"
+    id="jobPosition"
+    name="Job Position"
+    placeholder="Job Position"
+    readonly
+  >
+
+  <select name="Experience" required>
+    <option value="">Years of Experience</option>
+    <option>None</option>
+    <option>1–2 Years</option>
+    <option>3–5 Years</option>
+    <option>5+ Years</option>
+  </select>
+
+  <textarea
+    name="Additional Information"
+    rows="4"
+    placeholder="Additional information (optional)">
+  </textarea>
+
+  <button type="submit">Submit Application</button>
+</form>
+</div>
+
+<a href="index.html" class="back-link">← Back to Jobs</a>
+
+</div>
 </body>
 </html>
