--- a/plumbers.html
+++ b/plumbers.html
@@ -4,16 +4,354 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Plumbers — EuroVantage Jobs</title>
+
 <style>
-body {font-family:"Poppins",sans-serif;background:#f9f9f9;text-align:center;padding:40px;}
-img {width:90%;max-width:500px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);}
-a {display:inline-block;margin-top:25px;padding:10px 20px;background:#d4af37;color:#fff;border-radius:8px;text-decoration:none;}
+:root {
+  --gold: #d4af37;
+  --dark: #050505;
+  --dark-soft: #0b0b0b;
+  --text-light: #f2f2f2;
+}
+
+body{
+  margin:0;
+  font-family:"Poppins",sans-serif;
+  background:var(--dark);
+  color:var(--text-light);
+}
+
+.container{
+  max-width:1150px;
+  margin:auto;
+  padding:50px 20px;
+}
+
+h2{
+  color:var(--gold);
+  text-align:center;
+  font-size:36px;
+  margin-bottom:10px;
+}
+
+.intro{
+  text-align:center;
+  max-width:850px;
+  margin:0 auto 50px;
+  font-size:17px;
+  line-height:1.7;
+  color:#ddd;
+}
+
+.section-title{
+  margin:60px 0 25px;
+  font-size:28px;
+  color:var(--gold);
+  text-align:center;
+}
+
+/* Job Card */
+.job-card{
+  background:var(--dark-soft);
+  border-radius:18px;
+  box-shadow:0 8px 25px rgba(212,175,55,0.08);
+  border:1px solid rgba(212,175,55,0.15);
+  margin-bottom:35px;
+  padding:25px;
+  display:grid;
+  grid-template-columns:1fr 1.3fr;
+  gap:25px;
+  transition:.3s;
+}
+
+.job-card:hover{
+  transform:translateY(-4px);
+  box-shadow:0 12px 30px rgba(212,175,55,0.18);
+}
+
+.job-card img{
+  width:100%;
+  height:260px;
+  object-fit:cover;
+  border-radius:14px;
+}
+
+.job-card h3{
+  color:var(--gold);
+  margin-top:0;
+}
+
+.salary{
+  font-weight:600;
+  margin:10px 0;
+  color:#9cffc4;
+}
+
+.job-card p{
+  color:#ddd;
+  line-height:1.6;
+}
+
+.job-card ul{
+  padding-left:18px;
+  margin-top:10px;
+}
+
+.job-card li{
+  margin-bottom:6px;
+}
+
+/* Apply Button */
+.apply-btn{
+  display:inline-block;
+  margin-top:16px;
+  padding:12px 26px;
+  background:var(--gold);
+  color:#000;
+  font-weight:600;
+  border-radius:8px;
+  cursor:pointer;
+  transition:.3s;
+}
+
+.apply-btn:hover{
+  background:#c7a130;
+}
+
+/* Apply Form */
+#applyForm{
+  display:none;
+  background:var(--dark-soft);
+  border-radius:18px;
+  padding:35px;
+  margin-top:70px;
+  border:1px solid rgba(212,175,55,.2);
+  box-shadow:0 10px 30px rgba(0,0,0,.6);
+}
+
+#applyForm h3{
+  color:var(--gold);
+  text-align:center;
+  margin-bottom:10px;
+}
+
+#applyForm p{
+  text-align:center;
+  color:#ccc;
+  margin-bottom:30px;
+}
+
+form{
+  display:grid;
+  gap:15px;
+  max-width:520px;
+  margin:auto;
+}
+
+input,select,textarea{
+  padding:13px;
+  border-radius:8px;
+  border:1px solid #333;
+  background:#000;
+  color:#fff;
+  font-family:inherit;
+}
+
+input::placeholder, textarea::placeholder{
+  color:#777;
+}
+
+button{
+  padding:14px;
+  background:var(--gold);
+  color:#000;
+  border:none;
+  border-radius:8px;
+  font-weight:600;
+  cursor:pointer;
+}
+
+button:hover{
+  background:#c7a130;
+}
+
+.back-link{
+  display:inline-block;
+  margin-top:50px;
+  color:#aaa;
+  text-decoration:none;
+}
+
+.back-link:hover{
+  color:var(--gold);
+}
+
+/* Responsive */
+@media(max-width:850px){
+  .job-card{
+    grid-template-columns:1fr;
+  }
+}
 </style>
+
+<script>
+function showApplyForm(role){
+  document.getElementById("applyForm").style.display="block";
+  document.getElementById("jobPosition").value = role;
+  document.getElementById("applyForm").scrollIntoView({behavior:"smooth"});
+}
+</script>
+
 </head>
 <body>
-<h2>🚧 Plumbers</h2>
-<img src="https://i.pinimg.com/736x/60/b1/7e/60b17e3b74c1f07b8b11b5de73b2f785.jpg" alt="Plumbers">
-<p>Work with professional plumbing and installation teams in Europe ensuring modern facilities function smoothly.</p>
-<a href="index.html">← Back to Jobs</a>
+
+<div class="container">
+
+<h2>🚧 Plumbing Jobs in Europe</h2>
+<p class="intro">
+EuroVantage connects skilled and semi-skilled plumbers to verified employers across Europe.
+Our partners include construction firms, industrial plants, agricultural facilities, residential developers,
+and commercial maintenance companies.
+Plumbing professionals benefit from <strong>competitive salaries, legal contracts, stable work schedules, and long-term career growth</strong>.
+Whether you are experienced or just starting in technical trades, Europe offers high-demand opportunities in modern infrastructure projects.
+</p>
+
+<!-- ================= NON-SKILLED / SEMI-SKILLED ================= -->
+<h3 class="section-title">🔹 Entry-Level & Semi-Skilled Plumbing Jobs</h3>
+
+<div class="job-card">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5rnWFb0YaX7mGjglWuqegYbUwWUnmR8Uv6DDS0Y7Mlg&s=10">
+  <div>
+    <h3>Plumber Assistant / Helper</h3>
+    <div class="salary">💶 €1,400 – €1,900 / month</div>
+    <p>
+      Work alongside certified plumbers assisting with pipe installation, material handling,
+      basic repairs, and site preparation. Ideal for beginners seeking international trade experience.
+    </p>
+    <ul>
+      <li>No formal certification required</li>
+      <li>On-the-job training provided</li>
+      <li>Overtime and weekend pay available</li>
+      <li>Work locations: residential sites, construction projects, maintenance teams</li>
+    </ul>
+    <span class="apply-btn" onclick="showApplyForm('Plumber Assistant / Helper')">Apply</span>
+  </div>
+</div>
+
+<div class="job-card">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROeeoCNGOXdpah2PlUvtHxh_elv3S3SVOpXHPx0HRccQ&s=10">
+  <div>
+    <h3>Farm & Agricultural Plumbing Worker</h3>
+    <div class="salary">💶 €1,350 – €1,800 / month</div>
+    <p>
+      Install and maintain irrigation systems, water pipes, drainage lines, and livestock water systems
+      on farms and agricultural facilities across Europe.
+    </p>
+    <ul>
+      <li>Basic technical skills preferred</li>
+      <li>Outdoor and rural work environments</li>
+      <li>Seasonal bonuses and stable contracts</li>
+      <li>Work locations: farms, greenhouses, irrigation projects</li>
+    </ul>
+    <span class="apply-btn" onclick="showApplyForm('Farm & Agricultural Plumbing Worker')">Apply</span>
+  </div>
+</div>
+
+<!-- ================= SKILLED PLUMBING JOBS ================= -->
+<h3 class="section-title">🔹 Skilled Plumbing & Technical Positions</h3>
+
+<div class="job-card">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQE04_wACfyrIrIRnJB5ATtHUb2tGEQK_5YofgpagSIHg&s=10">
+  <div>
+    <h3>Construction Site Plumber</h3>
+    <div class="salary">💶 €1,800 – €2,700 / month</div>
+    <p>
+      Install plumbing systems in residential and commercial buildings including water supply,
+      drainage, heating systems, and sanitary installations.
+    </p>
+    <ul>
+      <li>Experience in construction projects preferred</li>
+      <li>Work with modern tools and equipment</li>
+      <li>High demand in urban development projects</li>
+      <li>Work locations: housing estates, office buildings, shopping complexes</li>
+    </ul>
+    <span class="apply-btn" onclick="showApplyForm('Construction Site Plumber')">Apply</span>
+  </div>
+</div>
+
+<div class="job-card">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1sj18tdK9uIeWI_XN569BsZdCUKd_bcQph7uyiGXg5A&s=10">
+  <div>
+    <h3>Industrial & Factory Plumber</h3>
+    <div class="salary">💶 €2,000 – €3,200 / month</div>
+    <p>
+      Maintain industrial piping systems, hydraulic lines, heating systems,
+      and factory infrastructure in manufacturing plants and industrial facilities.
+    </p>
+    <ul>
+      <li>Technical knowledge required</li>
+      <li>Higher salary for certified professionals</li>
+      <li>Long-term contracts available</li>
+      <li>Work locations: factories, power plants, processing facilities</li>
+    </ul>
+    <span class="apply-btn" onclick="showApplyForm('Industrial & Factory Plumber')">Apply</span>
+  </div>
+</div>
+
+<div class="job-card">
+  <img src="https://peninsulaplumber.com/cdn/shop/files/man-installs-heating-system-house-checks-pipes-with-wrench.jpg?v=1729650893&width=1500">
+  <div>
+    <h3>Residential & Maintenance Plumber</h3>
+    <div class="salary">💶 €1,700 – €2,600 / month</div>
+    <p>
+      Perform repairs, installations, and maintenance in homes, apartments,
+      hotels, and commercial buildings ensuring efficient water and heating systems.
+    </p>
+    <ul>
+      <li>Customer service skills beneficial</li>
+      <li>Stable work schedules</li>
+      <li>Bonus pay for emergency services</li>
+      <li>Work locations: homes, hotels, offices, commercial buildings</li>
+    </ul>
+    <span class="apply-btn" onclick="showApplyForm('Residential & Maintenance Plumber')">Apply</span>
+  </div>
+</div>
+
+<!-- ================= APPLY FORM ================= -->
+<div id="applyForm">
+  <h3>Apply for a Plumbing Position</h3>
+  <p>Submit your details and CV. Our EuroVantage recruitment team will contact you.</p>
+
+  <form action="https://formsubmit.co/eurovantage37@gmail.com" method="POST" enctype="multipart/form-data">
+
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_template" value="table">
+    <input type="hidden" name="_subject" value="New Plumbing Job Application — EuroVantage">
+    <input type="hidden" name="_next" value="thank-you.html">
+
+    <input type="text" name="Full Name" placeholder="Full Name" required>
+    <input type="email" name="Email Address" placeholder="Email Address" required>
+    <input type="tel" name="Phone Number" placeholder="Phone Number" required>
+
+    <input type="text" id="jobPosition" name="Job Position" placeholder="Job Position" readonly>
+
+    <select name="Experience Level" required>
+      <option value="">Years of Experience</option>
+      <option>None</option>
+      <option>1–2 Years</option>
+      <option>3–5 Years</option>
+      <option>5+ Years</option>
+    </select>
+
+    <input type="file" name="CV / Resume" accept=".pdf,.doc,.docx" required>
+
+    <textarea name="Additional Information" rows="4" placeholder="Additional information (optional)"></textarea>
+
+    <button type="submit">Submit Application</button>
+  </form>
+</div>
+
+<a href="index.html" class="back-link">← Back to Jobs</a>
+
+</div>
 </body>
 </html>
