--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>EuroVantage — Advance with Confidence. Arrive in Style.</title>
 
 <!-- ✅ SEO Meta -->
-<meta name="title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta name="title" content="EuroVantage Advance with Confidence. Arrive in Style.">
 <meta name="description" content="EuroVantage connects skilled professionals with verified European work and travel opportunities. Advance your career with confidence and arrive in style.">
 <meta name="keywords" content="EuroVantage, European jobs, work abroad, visa support, travel agency, Ghana jobs, recruitment Europe, job placement, overseas work">
 <!-- ✅ Structured Data for SEO (Image + Brand) -->
@@ -16,8 +16,8 @@
   "@type": "Organization",
   "name": "EuroVantage",
   "url": "https://www.eurovantage.com/",
-  "logo": "https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png",
-  "image": "https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png",
+  "logo": "https://i.postimg.cc/tTFBXnrX/file_00000000e9947230a50f0ca39b29f237.png",
+  "image": "https://i.postimg.cc/xTkZ1DQk/file-000000003a4071f589514f7a31460156.png",
   "description": "EuroVantage connects skilled professionals with verified European work and travel opportunities.",
   "sameAs": [
     "https://www.facebook.com/eurovantage",
@@ -29,15 +29,15 @@
 <!-- ✅ Open Graph -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.eurovantage.com/">
-<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta property="og:title" content="EuroVantage Advance with Confidence. Arrive in Style.">
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today.">
-<meta property="og:image" content="https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png">
+<meta property="og:image" content="https://i.postimg.cc/xTkZ1DQk/file-000000003a4071f589514f7a31460156.png">
 
 <!-- ✅ Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta property="twitter:title" content="EuroVantage  Advance with Confidence. Arrive in Style.">
 <meta property="twitter:description" content="Find verified European jobs with EuroVantage — trusted visa and work support agency.">
-<meta property="twitter:image" content="https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png">
+<meta property="twitter:image" content="https://i.postimg.cc/xTkZ1DQk/file-000000003a4071f589514f7a31460156.png">
 
 <link rel="icon" href="favicon.png">
 
